refactor: separate payment/owner address for TX signup endpoint
This splits clientAddress for signup to payment/ownerAddress like renew.
It also renames clientAddress to ownerAddress when listing clients

Fixes #160
